# gmapsscraper

./: .gitignore  AGENTS.md  README-TAURI.md  README-V2.md  README.md  app_logs.txt  build-app.sh  build-mac.sh  launch-app.sh  logssearch.txt  package-lock.json  package.json  prd.md  requirements.txt  start-dev.sh  test-curl-integration.py  test-enhanced-enrichment.py  test-search-enrichment.py  test_api.py  validate-enrichment.py
GMaps Lead Generator.app/Contents/: Info.plist
backend/api/: __init__.py  server.py
backend/api/routes/: costs.py  search.py  status.py
backend/core/: curl_cffi_scraper.py  enricher.py  exporter.py  hubspot_integration.py  main.py  scraper.py  ui.py
backend/data/: cache.db
backend/data/exports/: gmaps_leads_58f05ab89eb3_20250924_234211.csv  gmaps_leads_85c1839e2675_20250924_233145.csv
frontend/: package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx
frontend/src/components/Analytics/: Analytics.jsx
frontend/src/components/Batch/: Batch.jsx
frontend/src/components/Dashboard/: Dashboard.jsx
frontend/src/components/Debug/: Debug.jsx  LogViewer.jsx
frontend/src/components/Layout/: Header.jsx  Sidebar.jsx
frontend/src/components/Search/: Search.jsx
frontend/src/components/Settings/: Settings.jsx
frontend/src/services/: api.js  backendHealth.js  websocket.js
frontend/src/store/: appStore.js  logStore.js
src/: enricher.py  scraper.py  utils.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
tests/: test_enricher.py  test_scraper.py
